<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tela"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAppearance="@android:style/TextAppearance.Material.Caption" />

        <EditText
            android:id="@+id/editTextTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textAppearance="@android:style/TextAppearance.Material.Caption" />

        <Spinner
            android:id="@+id/spinnerCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genero" />

        <TextView
            android:id="@+id/textView03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cidade"
            android:textAppearance="@android:style/TextAppearance.Material.Caption" />

        <Spinner
            android:id="@+id/spinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genero" />

        <Switch
            android:id="@+id/switchAtiva"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/ativa" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sua_avaliacao" />

        <RatingBar
            android:id="@+id/ratingBarAvaliacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>